uodated all files

--- a/WordPass_Manager-main/WordPass_Manager-main/WordPass_Manager/passwords.html
+++ b/WordPass_Manager-main/WordPass_Manager-main/WordPass_Manager/passwords.html
@@ -44,3 +44,18 @@
   <script src="passwords.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Stored Passwords</title>
+  <!-- Add your CSS styles here if needed -->
+</head>
+<body>
+  <h1>Stored Passwords</h1>
+  <p>Here is where you'll display the stored passwords.</p>
+
+  <!-- Add your JavaScript logic here if needed -->
+</body>
+</html>
