--- a/WordPass_Manager-main/WordPass_Manager-main/WordPass_Manager/popup.html
+++ b/WordPass_Manager-main/WordPass_Manager-main/WordPass_Manager/popup.html
@@ -34,3 +34,18 @@
   <script src="popup.js"></script>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Password Manager</title>
+</head>
+<body>
+  <h1>WordPass Manager</h1>
+  <button type="button" onclick="openPasswordsPage()">View Passwords</button>
+
+  <script src="popup.js"></script>
+</body>
+</html>
+
